--- a/views/cms/system.ejs
+++ b/views/cms/system.ejs
@@ -17,8 +17,8 @@
     </header>
 
   <div style="margin-bottom: 10px">
-    <a class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-primary" href="/<%= page.getURL() %>?request=hosting"><span class="ui-button-icon-primary ui-icon ui-icon-pencil"></span><span class="ui-button-text">Hosting params</span></a>
-    <a class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-primary" href="/<%= page.getURL() %>?request=reload"><span class="ui-button-icon-primary ui-icon ui-icon-power"></span><span class="ui-button-text">Reload Structures</span></a>
+    <a class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-primary" href="/<%= page.getURL() %>?request=hosting"><span class="ui-button-icon-primary ui-icon ui-icon-pencil"></span><span class="ui-button-text">托管数据</span></a>
+    <a class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-icon-primary" href="/<%= page.getURL() %>?request=reload"><span class="ui-button-icon-primary ui-icon ui-icon-power"></span><span class="ui-button-text">数据重载</span></a>
   </div>
 
   <div id="content_data">
@@ -28,15 +28,15 @@
           <input type="hidden" name="id" value="<%=config.id%>" />
 
           <fieldset>
-            <p>Change System settings (better done in config.json)</p>
+            <p>修改系统设置(最好在config.json文件中)</p>
 
-            <p class="notification error">Warning: When changing the hostname, make sure you can still reach your site.<br />You can give more than 1 name, separating with comma's. Ex:"old-name.org,new-name.org,www.new-name.org".</p>
+            <p class="notification error">警告：当修改主站名称，请确保您能够访问到站点<br />您能够设置多个以“,”分割的名称。例如："old-name.org,new-name.org,www.new-name.org".</p>
 
-            <div><label for="hostname">Hostname</label>
+            <div><label for="hostname">站名</label>
                  <input type="text" id="hostname" name="hostname" value="<%=config.hostname %>" />
             </div>
 
-            <div><label for="owneremail">E-mail owner</label>
+            <div><label for="owneremail">E-mail</label>
                  <input type="email" id="owneremail" name="owneremail" value="<%=config.owneremail %>" disabled="disabled" />
             </div>
           </fieldset>
