--- a/views/cms/styles.ejs
+++ b/views/cms/styles.ejs
@@ -9,6 +9,7 @@
 <script src="<%=cstatic%>/js/lib/jquery-1.9.1<%=min%>.js"></script>
 <script src="<%=cstatic%>/js/lib/jquery-ui-1.10.1<%=min%>.js"></script>
 <script src="<%=cstatic%>/js/lib/jquery.validate<%=min%>.js"></script>
+<script src="<%=cstatic%>/js/lib/bootstrap/js/bootstrap<%=min%>.js"></script>
 
 <section>
     <header>
