--- a/views/cms/header.ejs
+++ b/views/cms/header.ejs
@@ -11,15 +11,16 @@
 	<meta http-equiv="description" content="<%=page.description%>" />
 	
 	<link rel="stylesheet" href="<%=cstatic%>/css/cody.css" media="screen,projection" />
-  <link rel="stylesheet" href="<%=cstatic%>/css/ui-lightness/jquery-ui-1.10.1<%=min%>.css" media="screen,projection">
+    <link rel="stylesheet" href="<%=cstatic%>/css/ui-lightness/jquery-ui-1.10.1<%=min%>.css" media="screen,projection">
+    <link rel="stylesheet" href="<%=cstatic%>/css/bootstrap/bootstrap<%=min%>.css" media="screen,projection">
 
-  <link rel="Shortcut Icon" href="<%=cstatic%>/images/favicon.ico">
-
-  <script> var gStatic = "<%=static%>",
-	 				  gDynamic = "<%=dynamic%>",
-            gImages = "<%=static%>/images",
-            gCody = "<%=cstatic%>",
-            gFiles = "<%=static%>/files",
-					  gLanguage = "<%=page.language%>"; </script>
+    <link rel="Shortcut Icon" href="<%=cstatic%>/images/favicon.ico">
+    <script> var gStatic = "<%=static%>",
+                    gDynamic = "<%=dynamic%>",
+                 gImages = "<%=static%>/images",
+                    gCody = "<%=cstatic%>",
+                 gFiles = "<%=static%>/files",
+                    gLanguage = "<%=page.language%>";
+    </script>
  		
 </head> 
