--- a/views/cms/templates.ejs
+++ b/views/cms/templates.ejs
@@ -10,6 +10,7 @@
 	<script src="<%=cstatic%>/js/lib/jquery-ui-1.10.1<%=min%>.js"></script>
 	<script src="<%=cstatic%>/js/lib/jquery.validate<%=min%>.js"></script>
 	<script src="<%=cstatic%>/js/lib/localization/messages_<%=page.language%>.js"></script>
+    <script src="<%=cstatic%>/js/lib/bootstrap/js/bootstrap<%=min%>.js"></script>
 
 	<script>
     function doDelContent() {
