--- a/views/cms/contacts.ejs
+++ b/views/cms/contacts.ejs
@@ -3,7 +3,7 @@
 <html lang="<%=page.language%>">
 
 <% include header.ejs %>
-<link rel="stylesheet" href="<%=cstatic%>/css/ui-lightness/jquery-ui-1.10.1<%=min%>.css" media="screen,projection">
+<link rel="stylesheet" href="<%=cstatic%>/css/bootstrap/css/bootstrap<%=min%>.css" media="screen">
 
 <body id="data">
   <script src="<%=cstatic%>/js/lib/jquery-1.9.1<%=min%>.js"></script>
