--- a/views/cms/top.ejs
+++ b/views/cms/top.ejs
@@ -1,11 +1,35 @@
-  <img src="<%=cstatic%>/images/logoMC.png">
-  <% if (page.parent && isLoggedIn()) { %>
+<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    <div class="container topnav">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <img src="<%=cstatic%>/images/logoMC.png">
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="<%=cstatic%>/manual.pdf"><%= __("Help Center")%></a>
+                </li>
+                <% if (isLoggedIn()) { %>
+                    <li>
+                        <a href="/<%=page.language%>/users?request=edit&id=<%=login.id%>"><%= __("Account")%></a>
+                    </li>
+                    <li>
+                        <a href="/<%=page.language%>/users?request=edit&id=<%=login.id%>"><%= __("Account")%></a>
+                    </li>
+                <% } %>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+</nav>
+<% if (page.parent && isLoggedIn()) { %>
     <span id="breadcrumb"><a href="/<%=page.language%>/dashboard"><%= __("Dashboard")%></a> » <%=page.parent.title%></span>
-  <% } %>
-  <section>
-    <a href="<%=cstatic%>/manual.pdf"><%= __("Help Center")%></a>
-    <% if (isLoggedIn()) { %>
-      <a href="/<%=page.language%>/users?request=edit&id=<%=login.id%>"><%= __("Account")%></a>
-      <a href="/<%=page.language%>/login/logout"><%= __("Sign out")%></a>
-    <% } %>
-  </section>
+<% } %>
