--- a/views/cms/top.ejs
+++ b/views/cms/top.ejs
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="<%=cstatic%>/images/logoMC.png">
+            <a class="navbar-brand topnav" href="#">CodyCMS</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
