--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,6 +20,8 @@
 <body>
 <section>
   <header>
+      <script src="<%=cstatic%>/js/lib/jquery-1.9.1<%=min%>.js"></script>
+      <script src="<%=cstatic%>/js/lib/bootstrap/js/bootstrap<%=min%>.js"></script>
     <% include ./cms/top.ejs %>
     <% include ./cms/navigation.ejs %>
   </header>
