--- a/views/cms/header.ejs
+++ b/views/cms/header.ejs
@@ -22,5 +22,8 @@
                  gFiles = "<%=static%>/files",
                     gLanguage = "<%=page.language%>";
     </script>
+    <script src="<%=cstatic%>/js/lib/jquery-1.9.1<%=min%>.js"></script>
+    <script src="<%=cstatic%>/js/lib/jquery-ui-1.10.1<%=min%>.js"></script>
+    <script src="<%=cstatic%>/js/lib/bootstrap/js/bootstrap<%=min%>.js"></script>
  		
 </head> 
