--- a/views/cms/top.ejs
+++ b/views/cms/top.ejs
@@ -21,7 +21,7 @@
                         <a href="/<%=page.language%>/users?request=edit&id=<%=login.id%>"><%= __("Account")%></a>
                     </li>
                     <li>
-                        <a href="/<%=page.language%>/users?request=edit&id=<%=login.id%>"><%= __("Account")%></a>
+                        <a href="/<%=page.language%>/login/logout"><%= __("Sign out")%></a>
                     </li>
                 <% } %>
             </ul>
