--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
 -->
 
 
-<body>
+<body class="intro-header">
     <header>
         <% include ./cms/top.ejs %>
         <% include ./cms/navigation.ejs %>
