--- a/static/css/third/landing-page.css
+++ b/static/css/third/landing-page.css
@@ -33,8 +33,6 @@ h6 {
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
-    text-align: center;
-    color: #f8f8f8;
     background: url(../../images/intro-bg.jpg) no-repeat center center;
     background-size: cover;
 }
@@ -167,4 +165,12 @@ footer {
 
 p.copyright {
     margin: 15px 0 0;
+}
+
+.transparent {
+    background: rgba(255, 0, 0, 0.3) !important;/* IE无效，FF有效 */
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
 }
