--- a/views/cms/dashboard.ejs
+++ b/views/cms/dashboard.ejs
@@ -23,7 +23,7 @@
                                               if (p.isVisible()) {
                                                   if(p.children.length > 0) {%>
                                                       <li>
-                                                          <a href="/<%= p.children[0].url %>" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"><%= p.title %></span></a>
+                                                          <a href="/<%= p.children[0].url %>" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-hand-right"></i> <span class="network-name"><%= p.title %></span></a>
                                                       </li>
                                                   <% } %>
                                               <% } %>
