--- a/static/css/third/landing-page.css
+++ b/static/css/third/landing-page.css
@@ -22,7 +22,7 @@ h6 {
 }
 
 .topnav {
-    font-size: 14px; 
+    font-size: 14px;
 }
 
 .lead {
@@ -39,8 +39,7 @@ h6 {
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 100px;
 }
 
 .intro-message > h1 {
@@ -159,7 +158,7 @@ h6 {
 }
 
 footer {
-    padding: 50px 0;
+    padding: 16px 0;
     background-color: #f8f8f8;
 }
 
