--- a/views/cms/dashboard.ejs
+++ b/views/cms/dashboard.ejs
@@ -4,39 +4,38 @@
 
 <% include header.ejs %>
 
-    <body id="dashboard">
-        <header>
-            <% include top.ejs %>
-        </header>
-        <div class="intro-header">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-lg-12">
-                          <div class="intro-message">
-                              <h3><%= __("Dashboard")%></h3>
-                              <hr class="intro-divider">
-                              <ul class="list-inline intro-social-buttons">
-                                  <% if (login) { %>
-                                      <% for (var i in page.children) {
-                                          var p = page.children[i];
-                                          if (p.isVisible()) {
-                                              if(p.children.length > 0) {%>
-                                                  <li>
-                                                      <a href="/<%= p.children[0].url %>" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-hand-right"></i> <span class="network-name"><%= p.title %></span></a>
-                                                  </li>
-                                              <% } %>
-                                          <% } %>
-                                      <% } %>
-                                  <% } else { %>
-                                      <h1>Login first</h1>
-                                  <% } %>
-                              </ul>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-        <% include footer.ejs %>
-    </body>
+<body id="dashboard" class="intro-header">
+<header>
+    <% include top.ejs %>
+</header>
+<div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="intro-message">
+                    <h3 class="text-center"><%= __("Dashboard")%></h3>
+                    <hr class="intro-divider">
+                    <ul class="list-inline intro-social-buttons text-center">
+                        <% if (login) { %>
+                            <% for (var i in page.children) {
+                                var p = page.children[i];
+                                if (p.isVisible()) {
+                                    if(p.children.length > 0) {%>
+                                        <li>
+                                            <a href="/<%= p.children[0].url %>" class="btn btn-default btn-lg"><i class="glyphicon glyphicon-hand-right"></i> <span class="network-name"><%= p.title %></span></a>
+                                        </li>
+                                    <% } %>
+                                <% } %>
+                            <% } %>
+                        <% } else { %>
+                            <h1>Login first</h1>
+                        <% } %>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
     
