--- a/views/cms/footer.ejs
+++ b/views/cms/footer.ejs
@@ -1,4 +1,26 @@
 <footer>
-	<p id="copyright">&copy;2010-2016 北京, 信息服务</p>
-	<p id="version"><%=version %></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li>
+                        <a href="#"><%= __("Home") %></a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="#services">Services</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="/<%=page.language%>/login/logout"><%= __("Logout") %></a>
+                    </li>
+                </ul>
+                <p id="copyright">&copy;2010-2016 北京, 信息服务</p>
+            </div>
+        </div>
+    </div>
 </footer>
