--- a/views/cms/files.ejs
+++ b/views/cms/files.ejs
@@ -29,11 +29,13 @@
     <div>
 		
  	    <div id="left_nav">
-	      <button id="doAddFolder"><%= __("Add Folder")%></button>
-	      <button id="doAddFile"><%= __("Add File")%></button><br>
-	      <button id="doRename" ><%= __("Rename")%></button>
-	      <button id="doDelete" ><%= __("Delete")%></button>
-	      <button id="doEdit" ><%= __("Edit")%></button>
+			<div class="btn-group" role="group" aria-label="...">
+				<button id="doAddFolder"><%= __("Add Folder")%></button>
+				<button id="doAddFile"><%= __("Add File")%></button>
+				<button id="doRename" ><%= __("Rename")%></button>
+				<button id="doDelete" ><%= __("Delete")%></button>
+				<button id="doEdit" ><%= __("Edit")%></button>
+			</div>
 
         <div id="tree">
           <ul><li id="id_<%= controller.getRoot() %>" class="open" rel="root"><a href="#"><ins>&nbsp;</ins>Files</a>
