--- a/views/cms/pages.ejs
+++ b/views/cms/pages.ejs
@@ -53,15 +53,17 @@
         </div>
 
         <div id="left_nav">
-            <button id="doAdd"><%= __("Add")%></button>
-            <button id="doRename"><%= __("Rename")%></button>
-            <button id="doDelete"><%= __("Delete")%></button>
-            <button id="doEdit"><%= __("Edit")%></button>
+			<div class="btn-group" role="group" aria-label="...">
+				<button id="doAdd"><%= __("Add")%></button>
+				<button id="doRename"><%= __("Rename")%></button>
+				<button id="doDelete"><%= __("Delete")%></button>
+				<button id="doEdit"><%= __("Edit")%></button>
+			</div>
 
-            <div id="ltabs" class="ui-tabs ui-widget">
-                <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+            <div id="ltabs">
+                <ul class="nav nav-tabs">
                     <% for (var iL in app.languages) { var L = app.languages[iL]; %>
-                        <li class="ui-state-default ui-corner-top <%= (page.language === L.id) ? 'ui-tabs-active ui-state-active' : '' %>" ><a href="/<%=L.id%>/pages" class="ui-tabs-anchor"><%=L.id.toUpperCase()%></a></li>
+                        <li role="presentation" class=" <%= (page.language === L.id) ? 'active' : '' %>" ><a href="/<%=L.id%>/pages" style="padding: 5px 15px;"><%=L.id.toUpperCase()%></a></li>
                     <% } %>
                 </ul>
 
