--- a/views/cms/forms.ejs
+++ b/views/cms/forms.ejs
@@ -58,10 +58,10 @@
 
     <div id="left_nav">
 		<div class="btn-group" role="group" aria-label="...">
-			<button id="doAddFolder"><%= __("Add Form")%></button>
-			<button id="doAddImage"><%= __("Add Item")%></button>
-			<button id="doDelete" ><%= __("Delete")%></button>
-			<button id="doEdit" ><%= __("Edit")%></button>
+			<button type="button"  class="btn btn-default" id="doAddFolder"><%= __("Add Form")%></button>
+			<button type="button"  class="btn btn-default" id="doAddImage"><%= __("Add Item")%></button>
+			<button type="button"  class="btn btn-default" id="doDelete" ><%= __("Delete")%></button>
+			<button type="button"  class="btn btn-default" id="doEdit" ><%= __("Edit")%></button>
 		</div>
 
       <div id="tree">
