--- a/views/cms/navigation.ejs
+++ b/views/cms/navigation.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="padding-top: 52px;">
     <% if (isLoggedIn()) { %>
         <ul class="nav navbar-nav">
             <% for (var i in page.parent.children) {
