--- a/views/cms/images.ejs
+++ b/views/cms/images.ejs
@@ -29,12 +29,12 @@
     <div>
 		
  	    <div id="left_nav">
-			<div class="btn-group" role="group" aria-label="...">
-				<button id="doAddFolder"><%= __("Add Folder")%> </button>
-				<button id="doAddImage"><%= __("Add Image")%> </button>
-				<button id="doRename" ><%= __("Rename")%></button>
-				<button id="doDelete" ><%= __("Delete")%></button>
-				<button id="doEdit" ><%= __("Edit")%></button>
+			<div class="btn-group btn-group-sm" role="group" aria-label="...">
+				<button type="button"  class="btn btn-default" id="doAddFolder"><%= __("Add Folder")%> </button>
+				<button type="button"  class="btn btn-default" id="doAddImage"><%= __("Add Image")%> </button>
+				<button type="button"  class="btn btn-default" id="doRename" ><%= __("Rename")%></button>
+				<button type="button"  class="btn btn-default" id="doDelete" ><%= __("Delete")%></button>
+				<button type="button"  class="btn btn-default" id="doEdit" ><%= __("Edit")%></button>
 			</div>
 
         <div id="tree">
