--- a/views/cms/pages.ejs
+++ b/views/cms/pages.ejs
@@ -54,10 +54,10 @@
 
         <div id="left_nav">
 			<div class="btn-group" role="group" aria-label="...">
-				<button id="doAdd"><%= __("Add")%></button>
-				<button id="doRename"><%= __("Rename")%></button>
-				<button id="doDelete"><%= __("Delete")%></button>
-				<button id="doEdit"><%= __("Edit")%></button>
+				<button type="button"  class="btn btn-default" id="doAdd"><%= __("Add")%></button>
+				<button type="button"  class="btn btn-default" id="doRename"><%= __("Rename")%></button>
+				<button type="button"  class="btn btn-default" id="doDelete"><%= __("Delete")%></button>
+				<button type="button"  class="btn btn-default" id="doEdit"><%= __("Edit")%></button>
 			</div>
 
             <div id="ltabs">
