--- a/views/cms/users.ejs
+++ b/views/cms/users.ejs
@@ -118,7 +118,7 @@
         <form action="./users" method="post" id="search">
         <input type="hidden" name="request" id="request" value="list" />
         <!--TODO: add  search button + input field -->
-        <button id="doNew"><%= __("New")%></button>
+        <button type="button"  class="btn btn-default" id="doNew"><%= __("New")%></button>
 
         <table id="records">
         <tr>
