--- a/views/cms/pages-ajax.ejs
+++ b/views/cms/pages-ajax.ejs
@@ -47,7 +47,7 @@
               <div class="actions">
                 <button class="doEditorT"><%= __('Edit')%></button>
                 <button class="doDeletor"><%= __('Delete')%></button>
-                <span class="ui-icon-arrowthick-2-n-s ui-icon"><%= __('Move')%></span>
+                <span class="label label-info"><%= __('Move')%></span>
               </div>
 
             <% } else if (c.kind == "M") { %>
@@ -59,7 +59,7 @@
               </div>
               <div class="actions">
                 <button class="doDeletor"><%= __('Delete')%></button>
-                <span class="ui-icon-arrowthick-2-n-s ui-icon"><%= __('Move')%></span>
+                <span class="label label-info"><%= __('Move')%></span>
               </div>
 
             <% } else if (c.kind == "S") { %>
@@ -71,7 +71,7 @@
             </div>
             <div class="actions">
               <button class="doDeletor"><%= __('Delete')%></button>
-              <span class="ui-icon-arrowthick-2-n-s ui-icon"><%= __('Move')%></span>
+              <span class="label label-info"><%= __('Move')%></span>
             </div>
 
             <% } else if (c.kind == "B") { %>
@@ -83,7 +83,7 @@
             </div>
             <div class="actions">
               <button class="doDeletor"><%= __('Delete')%></button>
-              <span class="ui-icon-arrowthick-2-n-s ui-icon"><%= __('Move')%>Move</span>
+              <span class="label label-info"><%= __('Move')%></span>
             </div>
 
             <% } else if (c.kind == "H") { %>
@@ -95,7 +95,7 @@
             </div>
             <div class="actions">
               <button class="doDeletor">Delete</button>
-              <span class="ui-icon-arrowthick-2-n-s ui-icon"><%= __('Move')%></span>
+              <span class="label label-info"><%= __('Move')%></span>
             </div>
 
             <% } else if (c.kind == "F") { %>
@@ -117,7 +117,7 @@
               <div class="actions">
                 <button class="doEditorF"><%= __('Edit')%></button>
                 <button class="doDeletor"><%= __('Delete')%></button>
-                <span class="ui-icon-arrowthick-2-n-s ui-icon"><%= __('Move')%></span>
+                <span class="label label-info"><%= __('Move')%></span>
               </div>
 
             <% } else if (c.kind == "I") { %>
@@ -134,7 +134,7 @@
               <div class="actions">
                 <button class="doEditorI"><%= __('Edit')%></button>
                 <button class="doDeletor"><%= __('Delete')%></button>
-                <span class="ui-icon-arrowthick-2-n-s ui-icon"><%= __('Move')%></span>
+                <span class="label label-info"><%= __('Move')%></span>
               </div>
 
             <% } else { %>
@@ -146,7 +146,7 @@
               </div>
               <div class="actions">
                 <button class="doDeletor"><%= __('Delete')%></button>
-                <span class="ui-icon-arrowthick-2-n-s ui-icon"><%= __('Move')%></span>
+                <span class="label label-info"><%= __('Move')%></span>
               </div>
 
             <% } %>
