--- a/views/cms/templates.ejs
+++ b/views/cms/templates.ejs
@@ -143,7 +143,7 @@
               <input type="hidden" name="intro_<%= c.id %>" class="intro" value="<%= c.intro %>" />
               <input type="hidden" name="kind_<%= c.id %>" class="kind" value="<%= c.kind %>" />
               <button class="doDeletor" rel="<%= c.id %>"><%= __("Delete")%></button>
-              <span class="ui-icon-arrowthick-2-n-s ui-icon mover"><%= __("Move")%></span>
+              <span class="label label-info mover"><%= __("Move")%></span>
             </article>
           <% } %>
         </div>
