--- a/views/cms/comments.ejs
+++ b/views/cms/comments.ejs
@@ -70,11 +70,11 @@
       <!-- voorlopig, moet uit controller komen -->
       <% var form_show = "W"; %>
 
-      <div id="ltabs" class="ui-tabs ui-widget">
-        <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
-          <li class="ui-state-default ui-corner-top <%= (form_show === "W") ? 'ui-tabs-active ui-state-active' : '' %>" ><a href="/<%=page.language%>/comments?request=list&form_show=N" class="ui-tabs-anchor">Waiting</a></li>
-          <li class="ui-state-default ui-corner-top <%= (form_show === "A") ? 'ui-tabs-active ui-state-active' : '' %>" ><a href="/<%=page.language%>/comments?request=list&form_show=T" class="ui-tabs-anchor">Approved</a></li>
-          <li class="ui-state-default ui-corner-top <%= (form_show === "R") ? 'ui-tabs-active ui-state-active' : '' %>" ><a href="/<%=page.language%>/comments?request=list&form_show=D" class="ui-tabs-anchor">Rejected</a></li>
+      <div id="ltabs">
+        <ul class="nav nav-tabs">
+          <li class="<%= (form_show === "W") ? 'active' : '' %>" ><a href="/<%=page.language%>/comments?request=list&form_show=N" class="ui-tabs-anchor"><%= __("Waiting")%></a></li>
+          <li class="<%= (form_show === "A") ? 'active' : '' %>" ><a href="/<%=page.language%>/comments?request=list&form_show=T" class="ui-tabs-anchor"><%= __("Approved")%></a></li>
+          <li class="<%= (form_show === "R") ? 'active' : '' %>" ><a href="/<%=page.language%>/comments?request=list&form_show=D" class="ui-tabs-anchor"><%= __("Rejected")%></a></li>
         </ul>
 
         <div id="tree" class="ui-corner-bottom">
